# AI_solo_coder_task_B_141

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.simulator  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  test-output.txt  test_output.txt  vite.config.ts  vitest.config.ts
backend/: CMakeLists.txt
backend/config/: dynamics.json  seismic.json
backend/include/: alert_engine.h  clickhouse_client.h  instrument_comparator.h  instrument_comparison.h  material_analyzer.h  mqtt_client.h  network_localizer.h  sensitivity_analyzer.h  simulation_engine.h  simulation_thread.h  vr_seismoscope.h
backend/include/common/: app_config.h  logger_metrics.h  messages.h
backend/include/modules/: alarm_mqtt.h  seismic_simulator.h  sensitivity_analyzer_module.h  udp_receiver.h
backend/src/: alert_engine.cpp  clickhouse_client.cpp  instrument_comparator.cpp  instrument_comparison.cpp  main.cpp  material_analyzer.cpp  mqtt_client.cpp  network_localizer.cpp  sensitivity_analyzer.cpp  simulation_engine.cpp  simulation_thread.cpp  vr_seismoscope.cpp
backend/src/common/: app_config.cpp  logger_metrics.cpp
backend/src/modules/: alarm_mqtt.cpp  seismic_simulator.cpp  sensitivity_analyzer_module.cpp  udp_receiver.cpp
backend/tests/: CMakeLists.txt  test_instrument_comparison.cpp  test_material_analysis.cpp  test_network_localizer.cpp  test_simulation_engine.cpp  test_simulation_thread.cpp  test_utils.h  test_vr_seismoscope.cpp
deploy/: mosquitto.conf  nginx-gzip.conf  nginx.conf  prometheus.yml
scripts/: init_clickhouse.sql  simulator.py
src/: App.tsx  index.css
src/__tests__/: FeatureComponents.test.tsx  InstrumentComparison.test.tsx  MaterialAnalysis.test.tsx  NetworkLocalization.test.tsx  VirtualExperience.test.tsx
src/components/Didongyi3D/: DidongyiModel.tsx  DragonInfoOverlay.tsx  SceneCanvas.tsx
src/components/Layout/: AppShell.tsx  Sidebar.tsx
src/components/Visuals/: HeatmapCanvas.tsx  PillarTrailCanvas.tsx  SeismicWaveform.tsx
src/features/instrumentComparison/: index.tsx  types.ts
src/features/instrumentComparison/components/: MiniHeatmap.tsx  RocChart.tsx
src/features/instrumentComparison/hooks/: useInstrumentComparison.ts
src/features/materialAnalysis/: index.tsx  types.ts
src/features/materialAnalysis/components/: BarChartWithErrorBars.tsx  BoxplotChart.tsx  DetailedDataTable.tsx  MaterialSummaryCard.tsx  MetricsTable.tsx  RadarChart.tsx  ScatterPlot.tsx
src/features/materialAnalysis/hooks/: useMaterialAnalysis.ts
src/features/networkLocalization/: index.tsx  types.ts
src/features/networkLocalization/components/: LocalizationMap.tsx
src/features/networkLocalization/hooks/: useNetworkLocalization.ts
src/features/virtualExperience/: index.tsx  types.ts
src/features/virtualExperience/components/: DirectionCompass.tsx  TriggerButton.tsx
src/features/virtualExperience/hooks/: useVirtualExperience.ts
src/lib/: api.ts  seismoscope_3d.js  sensitivity_panel.js
src/pages/: Alerts.tsx  Home.tsx  InstrumentComparison.tsx  MaterialAnalysis.tsx  NetworkLocalization.tsx  Sensitivity.tsx  Simulation.tsx  VirtualExperience.tsx
src/store/: realtimeStore.ts
src/test/: mockApi.ts  setupTests.tsx
src/types/: index.ts
